[package]
name = "chickadee"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chickadee"
path = "src/bin/main.rs"

[lib]
name = "libchickadee"


[dependencies]
anyhow = "^1.0.69"
lazy_static = "^1.4.0"
regex = "^1.7.0"
reqwest = { version = "^0.11", features = ["json", "gzip", "deflate", "brotli", "blocking"] }
serde = { version = "^1.0.160", features = ["derive"] }
serde_json = "^1.0.96"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.3.0"
