[package]
name = "chickadee"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chickadee"
path = "src/bin/main.rs"

[lib]
name = "libchickadee"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
regex = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "brotli", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.3.0"
